--- a/Frameworks/Core/ERDirectToWeb/Components/Nonlocalized.lproj/ERDControllerButton.wo/ERDControllerButton.html
+++ b/Frameworks/Core/ERDirectToWeb/Components/Nonlocalized.lproj/ERDControllerButton.wo/ERDControllerButton.html
@@ -1,13 +1,29 @@
-<span class="ERDControllerButton">
-<webobject name="IsFlyOver"><webobject name="FlyOver">
-<webobject name="FlyOverLabel"><webobject name="ControllerImage"></webobject></webobject>
-<webobject name="FlyOverContent">
-<webobject name="ShowAsButtons"><webobject name=Choices><webobject name=ChoiceButton></webobject>&nbsp;
-</webobject></webobject><webobject name="ShowAsList"><ul class="ERDControllerButtonFlyOverList">
-<webobject name="Choices"><li><webobject name="ChoiceLink"></webobject></li>
-</webobject></ul>
-</webobject></webobject>
-</webobject></webobject><webobject name = "IsNotFlyOver"><ul class="ERDControllerButtonLinkList">
-<webobject name="Choices"><li><webobject name = "IsButton"><webobject name="ChoiceButton"></webobject></webobject><webobject name = "IsNotButton"><webobject name="ChoiceLink"></webobject></webobject></li>
-</webobject></ul>
-</webobject></span>
+<span class = "ERDControllerButton">
+  <webobject name = "IsFlyOver">
+    <webobject name = "FlyOver">
+      <webobject name = "FlyOverLabel"><webobject name = "ControllerImage" /></webobject>
+      <webobject name = "FlyOverContent">
+        <webobject name = "ShowAsButtons">
+          <webobject name = "Choices"><webobject name = "ChoiceButton" />&nbsp; </webobject>
+        </webobject>
+        <webobject name = "ShowAsList">
+          <ul class = "ERDControllerButtonFlyOverList">
+            <webobject name = "Choices">
+              <li><webobject name = "ChoiceLink" /></li>
+            </webobject>
+          </ul>
+        </webobject>
+      </webobject>
+    </webobject>
+  </webobject>
+  <webobject name = "IsNotFlyOver">
+    <ul class = "ERDControllerButtonLinkList">
+      <webobject name = "Choices">
+        <li>
+          <webobject name = "IsButton"><webobject name = "ChoiceButton" /></webobject>
+          <webobject name = "IsNotButton"><webobject name = "ChoiceLink" /></webobject>
+        </li>
+      </webobject>
+    </ul>
+  </webobject>
+</span>
