ERMDNestingListPageRepetition is a special list page repetition for hierarchical object structures that extends ERMDListPageRepetition. Allows recursive access to a relationship specified via the "nestedRelationship" key. To use it, set it via "toManyRepetitionComponentName".
As an example, you could use this for a hierarchy of locations (think "continent > country > city > quarter"), with "containedLocations" as the nestedRelationship key. This will allow a "drill-down" access to locations.

--- a/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
+++ b/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
@@ -818,6 +818,12 @@ span.ErrorLabel {
 	background-color: #e6e9ef;
 }
 
+/* hide empty children row */
+.ObjRow.NestedObjRow .hidden {
+	line-height: 0px;
+	padding: 0px;
+}
+
 .ComboTHLink .Label{
 	text-decoration: none;
 	color: #c2c6cf;
