--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODEditRelationshipPage.wo/ERMODEditRelationshipPage.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODEditRelationshipPage.wo/ERMODEditRelationshipPage.html
@@ -12,7 +12,12 @@
           <webobject name = "ShowTopBatchCount">
             <webobject name = "TopNavBatchSize"><webobject name = "BatchSizeControl" /></webobject>
           </webobject>
-          <webobject name = "ToManyListRepetition" />
+		  <webobject name = "IsNotEditList">
+	          <webobject name = "ToManyListRepetition" />
+		  </webobject>
+		  <webobject name = "IsEditList">
+			  <webobject name = "EditListComponent" />
+		  </webobject>
           <webobject name = "ShowBottomBatchNavBar">
             <webobject name = "BottomNavBar"> <webobject name = "NavigationBar" /> </webobject>
           </webobject>
@@ -32,6 +37,7 @@
     <webobject name = "ShowBottomActionBlock">
       <webobject name = "BottomActionBlock">
       <ul class = "ActionList">
+        <li><webobject name = "EditListButton"/></li>
         <webobject name = "ShowCancel">
           <li><webobject name = "ReturnButton" /></li>
         </webobject>
