Don't use inline bindings.

--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDNestingListPageRepetition.wo/ERMDNestingListPageRepetition.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDNestingListPageRepetition.wo/ERMDNestingListPageRepetition.html
@@ -45,10 +45,10 @@
     <webobject name = "HasNestedRelationship">
 		<webobject name = "NestedUC">
 			<webobject name = "showNestedRelationshipEditor">
-				<td colspan="$columnCount"><webobject name = "NestedRelationshipEditor"></webobject></td>
+				<webobject name = "NestedRelationshipField"><webobject name = "NestedRelationshipEditor"></webobject></webobject>
 			</webobject>
 			<webobject name = "hideNestedRelationshipEditor">
-				<td class = "hidden" colspan="$columnCount">&nbsp;</td>
+				<webobject name = "HiddenNestedRelationshipField">&nbsp;</webobject>
 			</webobject>
 	    </webobject>
     </webobject>
