add overlay to dim the backgroud and prevent access

--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODEditRelationshipPage.wo/ERMODEditRelationshipPage.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODEditRelationshipPage.wo/ERMODEditRelationshipPage.html
@@ -46,9 +46,9 @@
     </webobject>
     </webobject>
     <div class="EmbeddedBlocks">
-    <webobject name = "DisplayQuery"><webobject name = "QueryBlock"><webobject name = "QueryComponent" /></webobject></webobject>
-    <webobject name = "DisplayList"><webobject name = "ListBlock"><webobject name = "ListComponent" /></webobject></webobject>
-    <webobject name = "DisplayNew"><webobject name = "InspectBlock"><webobject name = "InspectComponent" /></webobject></webobject>
+    <webobject name = "DisplayQuery"><div id = "embeddedOverlay"></div><webobject name = "QueryBlock"><webobject name = "QueryComponent" /></webobject></webobject>
+    <webobject name = "DisplayList"><div id = "embeddedOverlay"></div><webobject name = "ListBlock"><webobject name = "ListComponent" /></webobject></webobject>
+    <webobject name = "DisplayNew"><div id = "embeddedOverlay"></div><webobject name = "InspectBlock"><webobject name = "InspectComponent" /></webobject></webobject>
     </div>
     <webobject name = "BelowDisplayPropertyKeys" />
 </webobject>
