Hide toggle icon when object instance has no children. Increase clickable area by moving padding from td to a element.

--- a/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
+++ b/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
@@ -570,6 +570,14 @@ ul.L2WithChildren li.Nav2Selected {
 	width: 35px;
 }
 
+/* increase clickable area */
+.ShowNestedActionCell {
+	padding: 0;
+}
+.ShowNestedActionCell a {
+	padding: 0.5em;
+}
+
 .EmbeddedObjTable .RtActionCell,
 .EditRelationshipObjTable .RtActionCell {
 	width: 170px;
