--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDNestingListPageRepetition.wo/ERMDNestingListPageRepetition.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDNestingListPageRepetition.wo/ERMDNestingListPageRepetition.html
@@ -18,8 +18,10 @@
     </webobject>
     <webobject name = "ListTableRow">
     <webobject name = "HasNestedRelationship">
-      <td class="ActionCell">
-		<webobject name = "ToggleNestedRelationshipEditor"><webobject name = "DoCloseIcon"/><webobject name = "DoOpenIcon"/></webobject>
+      <td class="ActionCell ShowNestedActionCell">
+		<webobject name = "HasChildren">
+			<webobject name = "ToggleNestedRelationshipEditor"><webobject name = "DoCloseIcon"/><webobject name = "DoOpenIcon"/></webobject>
+		</webobject>
       </td>
     </webobject>
     <webobject name = "HasLeftActionsConditional">
