--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODEditRelationshipPage.wo/ERMODEditRelationshipPage.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODEditRelationshipPage.wo/ERMODEditRelationshipPage.html
@@ -2,54 +2,51 @@
   <webobject name = "RequiredWrapper">
     <webobject name = "AboveDisplayPropertyKeys" />
     <webobject name = "InnerWrapper">
-    <webobject name = "ListNotEmpty">
-      <webobject name = "IsToMany">
-      <div class="ToManyObjList">
-        <webobject name = "RepetitionUpdateContainer">
-          <webobject name = "ShowTopBatchNavBar">
-            <webobject name = "TopNavBar"> <webobject name = "NavigationBar" /> </webobject>
-          </webobject>
-          <webobject name = "ShowTopBatchCount">
-            <webobject name = "TopNavBatchSize"><webobject name = "BatchSizeControl" /></webobject>
-          </webobject>
-          <webobject name = "ToManyListRepetition" />
-          <webobject name = "ShowBottomBatchNavBar">
-            <webobject name = "BottomNavBar"> <webobject name = "NavigationBar" /> </webobject>
-          </webobject>
-          <webobject name = "ShowBottomBatchCount">
-            <webobject name = "BottomNavBatchSize"><webobject name = "BatchSizeControl" /></webobject>
-          </webobject>
+      <webobject name = "ListNotEmpty">
+        <webobject name = "IsToMany">
+          <div class = "ToManyObjList">
+            <webobject name = "RepetitionUpdateContainer">
+              <webobject name = "ShowTopBatchNavBar">
+                <webobject name = "TopNavBar"> <webobject name = "NavigationBar" /> </webobject>
+              </webobject>
+              <webobject name = "ShowTopBatchCount">
+                <webobject name = "TopNavBatchSize"><webobject name = "BatchSizeControl" /></webobject>
+              </webobject>
+              <webobject name = "ToManyListRepetition" />
+              <webobject name = "ShowBottomBatchNavBar">
+                <webobject name = "BottomNavBar"> <webobject name = "NavigationBar" /> </webobject>
+              </webobject>
+              <webobject name = "ShowBottomBatchCount">
+                <webobject name = "BottomNavBatchSize"><webobject name = "BatchSizeControl" /></webobject>
+              </webobject>
+            </webobject>
+          </div>
         </webobject>
-      </div>
-      </webobject>
-      <webobject name = "IsToOne">
-      <div class="ToOneObjList">
-        <webobject name = "ToOneListRepetition" />
-      </div>
-      </webobject>
+        <webobject name = "IsToOne">
+          <div class = "ToOneObjList"> <webobject name = "ToOneListRepetition" /> </div>
+        </webobject>
       </webobject>
       <webobject name = "ListEmpty"> <webobject name = "EmptyMessageComponent" /> </webobject>
-    <webobject name = "ShowBottomActionBlock">
-      <webobject name = "BottomActionBlock">
-      <ul class = "ActionList">
-        <webobject name = "ShowCancel">
-          <li><webobject name = "ReturnButton" /></li>
-        </webobject>
-        <webobject name = "ShowFind">
-          <li><webobject name = "QueryButton" /></li>
-        </webobject>
-        <webobject name = "IsEntityWritable">
-          <li><webobject name = "NewButton" /></li>
-        </webobject>
-      </ul>
+      <webobject name = "ShowBottomActionBlock">
+        <webobject name = "BottomActionBlock">
+          <webobject name = "BottomActions" />
+       	</webobject>
+      </webobject>
     </webobject>
-    </webobject>
-    </webobject>
-    <div class="EmbeddedBlocks">
-    <webobject name = "DisplayQuery"><div id = "embeddedOverlay"></div><webobject name = "QueryBlock"><webobject name = "QueryComponent" /></webobject></webobject>
-    <webobject name = "DisplayList"><div id = "embeddedOverlay"></div><webobject name = "ListBlock"><webobject name = "ListComponent" /></webobject></webobject>
-    <webobject name = "DisplayNew"><div id = "embeddedOverlay"></div><webobject name = "InspectBlock"><webobject name = "InspectComponent" /></webobject></webobject>
+    <div class = "EmbeddedBlocks">
+      <webobject name = "DisplayQuery">
+        <div id = "embeddedOverlay"></div>
+        <webobject name = "QueryBlock"><webobject name = "QueryComponent" /></webobject>
+      </webobject>
+      <webobject name = "DisplayList">
+        <div id = "embeddedOverlay"></div>
+        <webobject name = "ListBlock"><webobject name = "ListComponent" /></webobject>
+      </webobject>
+      <webobject name = "DisplayNew">
+        <div id = "embeddedOverlay"></div>
+        <webobject name = "InspectBlock"><webobject name = "InspectComponent" /></webobject>
+      </webobject>
     </div>
     <webobject name = "BelowDisplayPropertyKeys" />
-</webobject>
+  </webobject>
 </webobject>
