--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMD2WPropertyName.wo/ERMD2WPropertyName.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMD2WPropertyName.wo/ERMD2WPropertyName.html
@@ -3,6 +3,7 @@
 			<webobject name="PropertyName" />
 			<webobject name="DisplayMandatory"><webobject name = "abbr">*</webobject></webobject>
 	</webobject>
+	<webobject name = "DisplayPropertyHelpText"><webobject name = "HelpText"></webobject></webobject>
 </webobject>
 <webobject name=DebuggingEnabled><a onmouseout="this.innerHTML=this.innerHTML.replace('visibility: visible;','visibility: hidden;');" onmouseover="this.innerHTML=this.innerHTML.replace('visibility: hidden;','visibility: visible;');">?<span onclick="this.style.visibility='hidden'; return false;" style="position:absolute;visibility: hidden;">
 	<table class="D2WPropertyDebugInfo" onclick="this.style.visibility='hidden'; return false;">
