WIP on a usable D2W tag editor.

--- a/Frameworks/BusinessLogic/ERTaggable/Components/ERTagField.wo/ERTagField.html
+++ b/Frameworks/BusinessLogic/ERTaggable/Components/ERTagField.wo/ERTagField.html
@@ -1,6 +1,7 @@
 <div class = "tagField">
-  <webobject name = "TagField"/>
-  <webobject name = "AvailableTags">&nbsp;</webobject>
+<webobject name = "TagField"/>
+  <webobject name = "IsCaptionUI"><webobject name = "AvailableTags">&nbsp;</webobject></webobject>
+  <webobject name = "IsPopupUI"><webobject name = "AvailableTags">&nbsp;</webobject></webobject>
 </div>
 <script>
 new TagField('<webobject name = "ID"/>', '<webobject name = "TagsID"/>', <webobject name = "JavascriptTags"/>);
