--- a/Frameworks/Core/ERDirectToWeb/Components/ERD2WEditTags.wo/ERD2WEditTags.html
+++ b/Frameworks/Core/ERDirectToWeb/Components/ERD2WEditTags.wo/ERD2WEditTags.html
@@ -1,1 +1,18 @@
+<style>
+.tagField .availableTags {
+	padding-top: .8em;
+	min-height: 1.2em;
+}
+
+.tagField .availableTags a {
+	display: none;
+	visibility: hidden;
+}
+
+.tagField .availableTags a.suggested {
+	color: rgb(0, 0, 255);
+	display: inline;
+	visibility: visible;
+}
+</style>  
 <webobject name = "Tags"></webobject>
