--- a/Frameworks/BusinessLogic/ERCoreBusinessLogic/Components/ERCPropertyHelpText.wo/ERCPropertyHelpText.html
+++ b/Frameworks/BusinessLogic/ERCoreBusinessLogic/Components/ERCPropertyHelpText.wo/ERCPropertyHelpText.html
@@ -1,4 +1,9 @@
 <webobject name = "IsHelpTextEnabled">
+  <webobject name = "IsPageLevelHelpText">
+<webobject name="ShowCreate"><webobject name="Create">+</webobject></webobject><webobject name="ShowEdit"><webobject name="Edit">o</webobject>
+</webobject><webobject name="HelpText"></webobject>
+  </webobject>
+  <webobject name = "IsPropertyLevelHelpText">
   <span class = "Tooltip HelpTooltip PropertyHelpTooltip">
     <webobject name = "ShowCreate">
       <webobject name = "TooltipTriggerSpan">
@@ -23,4 +28,5 @@
       </webobject>
     </webobject>
   </span>
+  </webobject>
 </webobject>
