First cut of a popup with filter choices.

--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMD2WListFilter.wo/ERMD2WListFilter.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMD2WListFilter.wo/ERMD2WListFilter.html
@@ -1,5 +1,8 @@
 <div class = "ListFilter">
   <webobject name = "form">
     <webobject name = "observeField"> <webobject name = "SearchField" /> </webobject>
+    <webobject name = "showSearchChoices">
+	    <webobject name = "observeChoice"> <webobject name = "SearchChoices" /> </webobject>    
+    </webobject>
   </webobject>
 </div>
