dirty trick to switch between delegate and default page buttons

--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODInspectPage.wo/ERMODInspectPage.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODInspectPage.wo/ERMODInspectPage.html
@@ -30,7 +30,9 @@
     <div class = "InnerClear"></div>
     <webobject name = "ShowBottomActionBlock">
       <webobject name = "BottomActionBlock">
-        <webobject name = "BottomActions" />
+        <webobject name = "ShouldNotShowDefaultPageButtons">
+        	<webobject name = "BottomActions" />
+        </webobject>
         <webobject name = "ShouldShowDefaultPageButtons">
           <ul class = "ActionList">
             <webobject name = "IsEditingConditional">
