Fix unbalanced tag.

--- a/Frameworks/Core/ERDirectToWeb/Components/Nonlocalized.lproj/ERDDebuggingHelp.wo/ERDDebuggingHelp.html
+++ b/Frameworks/Core/ERDirectToWeb/Components/Nonlocalized.lproj/ERDDebuggingHelp.wo/ERDDebuggingHelp.html
@@ -85,7 +85,7 @@
             <webobject name = "d2wKeyResultUC">
               <webobject name = "isDump"><webobject name = "D2WContextInspector" /></webobject>
               <webobject name = "isNotDump">
-                <pre><webobject name = "String6" /></webobject></pre>
+                <pre><webobject name = "String6"/></pre>
               </webobject>
             </webobject>
           </td>
