enable focus script

--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODInspectPage.wo/ERMODInspectPage.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODInspectPage.wo/ERMODInspectPage.html
@@ -21,6 +21,9 @@
       <webobject name = "AboveDisplayPropertyKeys" />
       <webobject name = "ErrorBlock" />
       <webobject name = "InspectPageRepetition" />
+      <webobject name = "useFocus">
+        <webobject name = "IsEditing"><webobject name = "Script" /></webobject>
+      </webobject>
       <webobject name = "BelowDisplayPropertyKeys" />
     </webobject>
     <div class = "InnerClear"></div>
