--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODTabInspectPage.wo/ERMODTabInspectPage.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODTabInspectPage.wo/ERMODTabInspectPage.html
@@ -4,10 +4,6 @@
       <webobject name = "TopActionBlock">
       <webobject name = "ShouldShowDefaultPageButtons">
         <ul class = "ActionList">
-          <webobject name = "IsEditingConditional">
-            <li><webobject name = "CancelButton" /></li>
-            <li><webobject name = "SubmitChanges" /></li>
-          </webobject>
           <webobject name = "IsNotEditingConditional">
             <webobject name = "ShowCancel">
               <li><webobject name = "ReturnButton" /></li>
@@ -33,12 +29,9 @@
     </webobject>
     <webobject name = "ShowBottomActionBlock">
       <webobject name = "BottomActionBlock">
+      <webobject name = "BottomActions" />
       <webobject name = "ShouldShowDefaultPageButtons">
         <ul class = "ActionList">
-          <webobject name = "IsEditingConditional">
-            <li><webobject name = "CancelButton" /></li>
-            <li><webobject name = "SubmitChanges" /></li>
-          </webobject>
           <webobject name = "IsNotEditingConditional">
             <webobject name = "ShowCancel">
               <li><webobject name = "ReturnButton" /></li>
