hack for the next/previous buttons (ERMODWizardCreationPage)

--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDPageActionControllerButton.wo/ERMDPageActionControllerButton.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDPageActionControllerButton.wo/ERMDPageActionControllerButton.html
@@ -1,7 +1,14 @@
 <webobject name = "HasChoices">
   <webobject name = "ActionList">
     <webobject name = "BranchButtonRepetition">
-      <li><webobject name = "BranchButton" /></li>
+      <li>
+        <webobject name = "UseAjaxSubmitButton">
+          <webobject name = "BranchButton2">
+            <span>XX<webobject name = "BranchButton2Label" /></span>
+          </webobject>
+        </webobject>
+        <webobject name = "NotUseAjaxSubmitButton"> <webobject name = "BranchButton" /> </webobject>
+      </li>
     </webobject>
   </webobject>
 </webobject>
