delete button prefix

--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDPageActionControllerButton.wo/ERMDPageActionControllerButton.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDPageActionControllerButton.wo/ERMDPageActionControllerButton.html
@@ -4,7 +4,7 @@
       <li>
         <webobject name = "UseAjaxSubmitButton">
           <webobject name = "BranchButton2">
-            <span>XX<webobject name = "BranchButton2Label" /></span>
+            <span><webobject name = "BranchButton2Label" /></span>
           </webobject>
         </webobject>
         <webobject name = "NotUseAjaxSubmitButton"> <webobject name = "BranchButton" /> </webobject>
