Add a magnifying glass icon before the first search field.

--- a/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
+++ b/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
@@ -1477,6 +1477,10 @@ div.RtActionCell li {
 	display: table-row;
 }
 
+.ListFilter .icon-search {
+	margin-right: 5px;
+}
+
 .ListFilter .ListFilterSearch, .ListFilter .ListFilterChoices {
 	font-size: 16px;
 	display: table-cell;
