Make CCNotifications work with both full page loads and ajax requests. To achieve this, we use a simple notification queue based on the session object store. Three notification types are supported: "success", "error" and "alert", the latter represents a modal dialogue on which the user has to click to move on.
TODO: Implement filtering of notifications by key path and value, to enable restricted display of notifications pushed out via NSNotification (e.g. pass a UUID and a key path "session.user.guid" to restrict display of the notification to sessions of a specific user.

--- a/Frameworks/Ajax/ERCoolComponents/Components/CCNotifications.wo/CCNotifications.html
+++ b/Frameworks/Ajax/ERCoolComponents/Components/CCNotifications.wo/CCNotifications.html
@@ -1,2 +1,7 @@
 <webobject name = "alertifyJs"/>
 <script>alertify.logPosition("top right").maxLogItems(4);</script>
+<webobject name = "notificationUC">
+	<webobject name = "notifications">
+		<webobject name = "aNotification"/>
+	</webobject>
+</webobject>
