add bottom actions

--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODListPage.wo/ERMODListPage.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODListPage.wo/ERMODListPage.html
@@ -3,12 +3,12 @@
   <webobject name = "RequiredWrapper">
     <webobject name = "ShowTopActionBlock">
       <webobject name = "TopActionBlock">
-      <webobject name="ShouldShowDefaultPageButtons">
-        <webobject name = "ShowCancel">
-          <ul class = "ActionList">
-            <li><webobject name = "ReturnButton" /></li>
-          </ul>
-        </webobject>
+        <webobject name = "ShouldShowDefaultPageButtons">
+          <webobject name = "ShowCancel">
+            <ul class = "ActionList">
+              <li><webobject name = "ReturnButton" /></li>
+            </ul>
+          </webobject>
         </webobject>
         <webobject name = "SecondaryActionBlock" />
       </webobject>
@@ -35,11 +35,12 @@
     </webobject>
     <webobject name = "ShowBottomActionBlock">
       <webobject name = "BottomActionBlock">
-      <webobject name="ShouldShowDefaultPageButtons">
-        <webobject name = "ShowCancel">
-          <ul class = "ActionList">
-            <li><webobject name = "ReturnButton" /></li>
-          </ul>
+        <webobject name = "BottomActions" />
+        <webobject name = "ShouldShowDefaultPageButtons">
+          <webobject name = "ShowCancel">
+            <ul class = "ActionList">
+              <li><webobject name = "ReturnButton" /></li>
+            </ul>
           </webobject>
         </webobject>
         <webobject name = "SecondaryActionBlock" />
