Add "ActionList" CSS class to list of branch actions.

--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODPickListPage.wo/ERMODPickListPage.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODPickListPage.wo/ERMODPickListPage.html
@@ -26,7 +26,7 @@
             </webobject>
           </ul>
           <webobject name = "HasBranchChoices">
-            <ul class = "BranchActionList">
+            <ul class = "ActionList BranchActionList">
               <webobject name = "BranchChoices">
                 <li><webobject name = "BranchActionButton" /></li>
               </webobject>
