--- a/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
+++ b/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
@@ -33,6 +33,10 @@ input, textarea, select {
 	border: 1px solid #aaa;
 }
 
+.CreateAttrVal input[type="checkbox"], .EditAttrVal input[type="checkbox"] {
+    width: 15px;
+}
+
 textarea {
 	height: 140px;
 }
