--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDSimpleListPageRepetition.wo/ERMDSimpleListPageRepetition.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDSimpleListPageRepetition.wo/ERMDSimpleListPageRepetition.html
@@ -1,7 +1,7 @@
 <webobject name = "ObjectTable">
   <webobject name = "ObjectsRepetition">  
     <webobject name = "IsRenderTableHeader">
-      <webobject name = "ObjectTableHeaderRow">
+      <thead><webobject name = "ObjectTableHeaderRow">
         <webobject name = "HasLeftActionsConditional"><th class="ActionCell LftActionCell"><webobject name = "HasNoRightActionsConditional"><webobject name = "ColumnSelector"/></webobject>&nbsp;</th></webobject>
         <webobject name = "SectionRepetition">
           <webobject name = "ColumnLabelRepetition">
@@ -14,6 +14,7 @@
         </webobject>
         <webobject name = "HasRightActionsConditional"><th class="ActionCell RtActionCell"><webobject name = "ColumnSelector"/>&nbsp;</th></webobject>
       </webobject>
+     </thead>
     </webobject>
     <webobject name = "ListTableRow">
     <webobject name = "HasLeftActionsConditional">
