Use class instead of id for embedded overlay divs. Capitalize class name to adhere to convention.

--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODEditRelationshipPage.wo/ERMODEditRelationshipPage.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODEditRelationshipPage.wo/ERMODEditRelationshipPage.html
@@ -35,15 +35,15 @@
     </webobject>
     <div class = "EmbeddedBlocks">
       <webobject name = "DisplayQuery">
-        <div id = "embeddedOverlay"></div>
+        <div class = "EmbeddedOverlay"></div>
         <webobject name = "QueryBlock"><webobject name = "QueryComponent" /></webobject>
       </webobject>
       <webobject name = "DisplayList">
-        <div id = "embeddedOverlay"></div>
+        <div class = "EmbeddedOverlay"></div>
         <webobject name = "ListBlock"><webobject name = "ListComponent" /></webobject>
       </webobject>
       <webobject name = "DisplayNew">
-        <div id = "embeddedOverlay"></div>
+        <div class = "EmbeddedOverlay"></div>
         <webobject name = "InspectBlock"><webobject name = "InspectComponent" /></webobject>
       </webobject>
     </div>
