--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODRequiredWrapper.wo/ERMODRequiredWrapper.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODRequiredWrapper.wo/ERMODRequiredWrapper.html
@@ -6,6 +6,7 @@
       <webobject name = "HeaderDiv"> <webobject name = "Header" /> </webobject>
     </webobject>
     <webobject name = "Content" />
+    <webobject name = "TabIndexScript"></webobject>
   </webobject>
 </webobject>
 <webobject name = "Notifications"/>
