Right-float the list filter search icon.

--- a/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
+++ b/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
@@ -1527,6 +1527,7 @@ div.RtActionCell li {
 
 .ListFilter .icon-search {
 	margin-right: 5px;
+	float: right;
 }
 
 .ListFilter .ListFilterSearch, .ListFilter .ListFilterChoices {
