Add branch delegate debug info.

--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDPageActionControllerButton.wo/ERMDPageActionControllerButton.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDPageActionControllerButton.wo/ERMDPageActionControllerButton.html
@@ -11,4 +11,13 @@
       </li>
     </webobject>
   </webobject>
+  <webobject name = "DebuggingEnabled">
+    <a class = "D2WPropertyDebugInfoToolTip">?<span><table class = "D2WPropertyDebugInfo">
+          <tr>
+            <th>Branch delegate</th>
+            <td><webobject name = "branchDelegateClass"/></td>
+          </tr>
+      </table></span>
+    </a>
+  </webobject>
 </webobject>
