--- a/Frameworks/Core/ERDirectToWeb/Components/Nonlocalized.lproj/ERDControllerButton.wo/ERDControllerButton.html
+++ b/Frameworks/Core/ERDirectToWeb/Components/Nonlocalized.lproj/ERDControllerButton.wo/ERDControllerButton.html
@@ -31,4 +31,13 @@
       </webobject>
     </ul>
   </webobject>
+  <webobject name = "DebuggingEnabled">
+    <a class = "D2WPropertyDebugInfoToolTip">?<span><table class = "D2WPropertyDebugInfo">
+          <tr>
+            <th>Branch delegate</th>
+            <td><webobject name = "branchDelegateClass"/></td>
+          </tr>
+      </table></span>
+    </a>
+  </webobject>
 </span>
