Unified keyboard navigation handling (keyboard shortcuts and tab key) and fixed shortcut handling in embedded dialogues.

--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODRequiredWrapper.wo/ERMODRequiredWrapper.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODRequiredWrapper.wo/ERMODRequiredWrapper.html
@@ -6,7 +6,7 @@
       <webobject name = "HeaderDiv"> <webobject name = "Header" /> </webobject>
     </webobject>
     <webobject name = "Content" />
-    <webobject name = "TabIndexScript"></webobject>
+    <webobject name = "KeyboardNavScript"></webobject>
   </webobject>
 </webobject>
 <webobject name = "Notifications"/>
