Make CCTooltips compatible with IE 10, by using a polyfill for the missing MutationObserver. Extended ERXBrowser to handle version numbers up to 11. Dropped attributeFilter parameter during observer init, as it caused problems with IE 11 and would not have worked as intended anyway (attribute vs element…).

--- a/Frameworks/Ajax/ERCoolComponents/Components/CCTooltips.wo/CCTooltips.html
+++ b/Frameworks/Ajax/ERCoolComponents/Components/CCTooltips.wo/CCTooltips.html
@@ -1,5 +1,6 @@
 <webobject name = "opentipCss" />
 <webobject name = "opentipJs" />
+<webobject name = "isPolyfillRequired"><webobject name = "mutationObserverPolyfill"/></webobject>
 <script type = "text/javascript">
   Opentip.styles.wonder = {
     escapeContent: true,
@@ -33,12 +34,8 @@
   	var observer = new MutationObserver(function(mutations) {
       	addOpentips();
   	});
-  	var mainContentDiv = document.getElementById('MainContent');
-  	observer.observe(document.body, {
-    		attributeFilter: ['span'],
-    		childList: true,
-    		subtree: true
-  	});
+	var mainContentDiv = document.getElementById('MainContent');
+	observer.observe(mainContentDiv, {childList: true, subtree: true});
   };
 
   document.addEventListener("DOMContentLoaded", addOpentips, false);
