localizeValue binding added to optionally suppress the localization of the displayed value

--- a/Frameworks/Ajax/ERCoolComponents/Components/Nonlocalized.lproj/CCSmartAjaxButton.wo/CCSmartAjaxButton.html
+++ b/Frameworks/Ajax/ERCoolComponents/Components/Nonlocalized.lproj/CCSmartAjaxButton.wo/CCSmartAjaxButton.html
@@ -1,9 +1,19 @@
 <webobject name = "NotUseAjax"><webobject name = "Button" /></webobject>
 <webobject name = "UseAjax">
   <webobject name = "DontSubmitForm">
-    <webobject name = "AjaxLink"><span><webobject name = "ButtonLabel" /></span></webobject>
+    <webobject name = "AjaxLink">
+      <span>
+        <webobject name = "LocalizeValue"><webobject name = "LocalizedButtonLabel" /></webobject>
+        <webobject name = "DontLocalizeValue"><webobject name = "ButtonLabel" /></webobject>
+      </span>
+    </webobject>
   </webobject>
   <webobject name = "SubmitForm">
-    <webobject name = "AjaxButton"><span><webobject name = "ButtonLabel" /></span></webobject>
+    <webobject name = "AjaxButton">
+      <span>
+        <webobject name = "LocalizeValue"><webobject name = "LocalizedButtonLabel" /></webobject>
+        <webobject name = "DontLocalizeValue"><webobject name = "ButtonLabel" /></webobject>
+      </span>
+    </webobject>
   </webobject>
 </webobject>
