Fix mark-up of combined table header by moving ERCHelpText out of ERMD2WPropertyName. This makes the fly-over in table columns work in development. (TA-400)

--- a/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
+++ b/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
@@ -1689,14 +1689,16 @@ span span.Tooltip.HelpTooltip.PropertyHelpTooltip + a {
 	   display: none;
 }
 
-.ListObjTableHd span.Tooltip {
-	   display: none;
-}
-
 .ERCPropertyHelpTextIcon {
     fill: #aaa;
     height: 16px;
     width: 16px;
+}
+
+/* make table header play nice with help text link */
+.TableHeader a, .TableHeader span {
+	float: left;
+	display: inline;
 }
 
 /* DEBUG FLAGS */
