--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDInspectPageRepetition.wo/ERMDInspectPageRepetition.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDInspectPageRepetition.wo/ERMDInspectPageRepetition.html
@@ -11,7 +11,7 @@
           <webobject name = "IsNotOmitted">
             <div class = "LineInner">
               <webobject name = "LabelWrapper">
-                <webobject name = "HasPropertyName"><webobject name = "PropertyName" /></webobject>
+                <webobject name = "HasPropertyName"><webobject name = "PropertyName" /><webobject name = "DisplayPropertyHelpText"><webobject name = "HelpText" /></webobject></webobject>
                 <webobject name = "HasNoPropertyName">
                   <webobject name = "EmptyLabelSpan">&nbsp;</webobject>
                 </webobject>
