--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMD2WCombinedTableHeader.wo/ERMD2WCombinedTableHeader.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMD2WCombinedTableHeader.wo/ERMD2WCombinedTableHeader.html
@@ -1,9 +1,11 @@
 <webobject name = "IsPropertySortable">
 <webobject name = "InFormConditional">
-  <webobject name = "ToggleSubmit"><webobject name = "PropertyName" /></webobject>
+  <div class = "TableHeader"><webobject name = "ToggleSubmit"><webobject name = "PropertyName" /></webobject>
+  <webobject name = "DisplayPropertyHelpText"><webobject name = "HelpText" /></webobject></div>
 </webobject>
 <webobject name = "NotInFormConditional">
-	<webobject name = "ToggleLink"><webobject name = "PropertyName" /></webobject>
+	<div class = "TableHeader"><webobject name = "ToggleLink"><webobject name = "PropertyName" /></webobject>
+	<webobject name = "DisplayPropertyHelpText"><webobject name = "HelpText" /></webobject></div>
 </webobject>
 </webobject>
-<webobject name = "IsNotPropertySortable"><webobject name = "PropertyName" /></webobject>
+<webobject name = "IsNotPropertySortable"><webobject name = "PropertyName" /><webobject name = "DisplayPropertyHelpText"><webobject name = "HelpText" /></webobject></webobject>
